src/fit/sdk/fit_example.h


///////////////////////////////////////////////////////////////////////
// Types
///////////////////////////////////////////////////////////////////////


typedef FIT_ENUM FIT_FILE;

typedef FIT_UINT32 FIT_DATE_TIME; // seconds since UTC 00:00 Dec 31 1989

typedef FIT_UINT32 FIT_LOCAL_DATE_TIME; // seconds since 00:00 Dec 31 1989 in local time zone

typedef FIT_UINT16 FIT_MESSAGE_INDEX;

typedef FIT_ENUM FIT_DISPLAY_MEASURE;

typedef FIT_ENUM FIT_SPORT;

typedef FIT_ENUM FIT_SUB_SPORT;

typedef FIT_ENUM FIT_ACTIVITY;

typedef FIT_ENUM FIT_SESSION_TRIGGER;

typedef FIT_ENUM FIT_EVENT;

typedef FIT_ENUM FIT_EVENT_TYPE;

typedef FIT_UINT16 FIT_MANUFACTURER;

typedef FIT_ENUM FIT_SWIM_STROKE;

typedef FIT_UINT8 FIT_LEFT_RIGHT_BALANCE;

typedef FIT_UINT16 FIT_LEFT_RIGHT_BALANCE_100;

typedef struct
{
   FIT_UINT32Z serial_number; // 
   FIT_DATE_TIME time_created; // Only set for files that are can be created/erased.
   FIT_MANUFACTURER manufacturer; // 
   FIT_UINT16 product; // 
   FIT_UINT16 number; // Only set for files that are not created/erased.
   FIT_FILE type; // 
} FIT_FILE_ID_MESG;

typedef struct
{
   FIT_UINT16 software_version; // 
   FIT_UINT8 hardware_version; // 
} FIT_FILE_CREATOR_MESG;

typedef struct
{
   FIT_DATE_TIME timestamp; // 
   FIT_UINT32 total_timer_time; // 1000 * s,Exclude pauses
   FIT_LOCAL_DATE_TIME local_timestamp; // timestamp epoch expressed in local time, used to convert activity timestamps to local time 
   FIT_UINT16 num_sessions; // 
   FIT_ACTIVITY type; // 
   FIT_EVENT event; // 
   FIT_EVENT_TYPE event_type; // 
   FIT_UINT8 event_group; // 
} FIT_ACTIVITY_MESG;

typedef struct
{
   FIT_DATE_TIME timestamp; // s,Sesson end time.
   FIT_DATE_TIME start_time; // 
   FIT_SINT32 start_position_lat; // semicircles,
   FIT_SINT32 start_position_long; // semicircles,
   FIT_UINT32 total_elapsed_time; // 1000 * s,Time (includes pauses)
   FIT_UINT32 total_timer_time; // 1000 * s,Timer Time (excludes pauses)
   FIT_UINT32 total_distance; // 100 * m,
   FIT_UINT32 total_cycles; // cycles,
   FIT_SINT32 nec_lat; // semicircles,
   FIT_SINT32 nec_long; // semicircles,
   FIT_SINT32 swc_lat; // semicircles,
   FIT_SINT32 swc_long; // semicircles,
   FIT_UINT32 avg_stroke_count; // 10 * strokes/lap,
   FIT_UINT32 total_work; // J,
   FIT_UINT32 total_moving_time; // 1000 * s,
   FIT_UINT32 time_in_hr_zone[FIT_SESSION_MESG_TIME_IN_HR_ZONE_COUNT]; // 1000 * s,
   FIT_UINT32 time_in_speed_zone[FIT_SESSION_MESG_TIME_IN_SPEED_ZONE_COUNT]; // 1000 * s,
   FIT_UINT32 time_in_cadence_zone[FIT_SESSION_MESG_TIME_IN_CADENCE_ZONE_COUNT]; // 1000 * s,
   FIT_UINT32 time_in_power_zone[FIT_SESSION_MESG_TIME_IN_POWER_ZONE_COUNT]; // 1000 * s,
   FIT_UINT32 avg_lap_time; // 1000 * s,
   FIT_MESSAGE_INDEX message_index; // Selected bit is set for the current session.
   FIT_UINT16 total_calories; // kcal,
   FIT_UINT16 total_fat_calories; // kcal,
   FIT_UINT16 avg_speed; // 1000 * m/s,total_distance / total_timer_time
   FIT_UINT16 max_speed; // 1000 * m/s,
   FIT_UINT16 avg_power; // watts,total_power / total_timer_time if non_zero_avg_power otherwise total_power / total_elapsed_time
   FIT_UINT16 max_power; // watts,
   FIT_UINT16 total_ascent; // m,
   FIT_UINT16 total_descent; // m,
   FIT_UINT16 first_lap_index; // 
   FIT_UINT16 num_laps; // 
   FIT_UINT16 normalized_power; // watts,
   FIT_UINT16 training_stress_score; // 10 * tss,
   FIT_UINT16 intensity_factor; // 1000 * if,
   FIT_LEFT_RIGHT_BALANCE_100 left_right_balance; // 
   FIT_UINT16 avg_stroke_distance; // 100 * m,
   FIT_UINT16 pool_length; // 100 * m,
   FIT_UINT16 num_active_lengths; // lengths,# of active lengths of swim pool
   FIT_UINT16 avg_altitude; // 5 * m + 500,
   FIT_UINT16 max_altitude; // 5 * m + 500,
   FIT_SINT16 avg_grade; // 100 * %,
   FIT_SINT16 avg_pos_grade; // 100 * %,
   FIT_SINT16 avg_neg_grade; // 100 * %,
   FIT_SINT16 max_pos_grade; // 100 * %,
   FIT_SINT16 max_neg_grade; // 100 * %,
   FIT_SINT16 avg_pos_vertical_speed; // 1000 * m/s,
   FIT_SINT16 avg_neg_vertical_speed; // 1000 * m/s,
   FIT_SINT16 max_pos_vertical_speed; // 1000 * m/s,
   FIT_SINT16 max_neg_vertical_speed; // 1000 * m/s,
   FIT_UINT16 best_lap_index; // 
   FIT_UINT16 min_altitude; // 5 * m + 500,
   FIT_EVENT event; // session
   FIT_EVENT_TYPE event_type; // stop
   FIT_SPORT sport; // 
   FIT_SUB_SPORT sub_sport; // 
   FIT_UINT8 avg_heart_rate; // bpm,average heart rate (excludes pause time)
   FIT_UINT8 max_heart_rate; // bpm,
   FIT_UINT8 avg_cadence; // rpm,total_cycles / total_timer_time if non_zero_avg_cadence otherwise total_cycles / total_elapsed_time
   FIT_UINT8 max_cadence; // rpm,
   FIT_UINT8 total_training_effect; // 
   FIT_UINT8 event_group; // 
   FIT_SESSION_TRIGGER trigger; // 
   FIT_SWIM_STROKE swim_stroke; // swim_stroke,
   FIT_DISPLAY_MEASURE pool_length_unit; // 
   FIT_UINT8 gps_accuracy; // m,
   FIT_SINT8 avg_temperature; // C,
   FIT_SINT8 max_temperature; // C,
   FIT_UINT8 min_heart_rate; // bpm,
} FIT_SESSION_MESG;