fit/sdk/fit_convert.h



//////////////////////////////////////////////////////////////////////////////////
// Public Definitions
//////////////////////////////////////////////////////////////////////////////////

typedef enum
{
   FIT_CONVERT_CONTINUE = 0,
   FIT_CONVERT_MESSAGE_AVAILABLE,
   FIT_CONVERT_ERROR,
   FIT_CONVERT_END_OF_FILE,
   FIT_CONVERT_PROTOCOL_VERSION_NOT_SUPPORTED,
   FIT_CONVERT_DATA_TYPE_NOT_SUPPORTED
} FIT_CONVERT_RETURN;


typedef enum
{
   FIT_CONVERT_DECODE_FILE_HDR,
   FIT_CONVERT_DECODE_RECORD,
   FIT_CONVERT_DECODE_RESERVED1,
   FIT_CONVERT_DECODE_ARCH,
   FIT_CONVERT_DECODE_GTYPE_1,
   FIT_CONVERT_DECODE_GTYPE_2,
   FIT_CONVERT_DECODE_NUM_FIELD_DEFS,
   FIT_CONVERT_DECODE_FIELD_DEF,
   FIT_CONVERT_DECODE_FIELD_DEF_SIZE,
   FIT_CONVERT_DECODE_FIELD_BASE_TYPE,
   FIT_CONVERT_DECODE_FIELD_DATA
} FIT_CONVERT_DECODE_STATE;


typedef struct
{
   FIT_UINT32 file_bytes_left;
   FIT_UINT32 data_offset;
   #if defined(FIT_CONVERT_TIME_RECORD)
      FIT_UINT32 timestamp;
   #endif
   union
   {
      FIT_FILE_HDR file_hdr;
      FIT_UINT8 mesg[FIT_MESG_SIZE];
   }u;
   FIT_MESG_CONVERT convert_table[FIT_LOCAL_MESGS];
   const FIT_MESG_DEF *mesg_def;
   #if defined(FIT_CONVERT_CHECK_CRC)
      FIT_UINT16 crc;
   #endif
   FIT_CONVERT_DECODE_STATE decode_state;
   FIT_UINT8 mesg_index;
   FIT_UINT8 mesg_sizes[FIT_MAX_LOCAL_MESGS];
   FIT_UINT8 mesg_offset;
   FIT_UINT8 num_fields;
   FIT_UINT8 field_num;
   FIT_UINT8 field_index;
   FIT_UINT8 field_offset;
   #if defined(FIT_CONVERT_TIME_RECORD)
      FIT_UINT8 last_time_offset;
   #endif
} FIT_CONVERT_STATE;
   void FitConvert_Init(FIT_CONVERT_STATE *state, FIT_BOOL read_file_header);
   void FitConvert_Init(FIT_BOOL read_file_header);
   FIT_CONVERT_RETURN FitConvert_Read(FIT_CONVERT_STATE *state, const void *data, FIT_UINT32 size);
   FIT_CONVERT_RETURN FitConvert_Read(const void *data, FIT_UINT32 size);
   FIT_MESG_NUM FitConvert_GetMessageNumber(FIT_CONVERT_STATE *state);
   FIT_MESG_NUM FitConvert_GetMessageNumber(void);
   const FIT_UINT8 *FitConvert_GetMessageData(FIT_CONVERT_STATE *state);
   const FIT_UINT8 *FitConvert_GetMessageData(void);
   void FitConvert_RestoreFields(FIT_CONVERT_STATE *state, const void *mesg_data);
   void FitConvert_RestoreFields(const void *mesg_data);